syntax = "proto3";

package cluster;

service Cluster {
    // Worker registers with Controller and keeps stream open for commands
    rpc Register (stream WorkerMessage) returns (stream ControllerCommand);
    
    // Worker streams metrics to Controller
    rpc ReportMetrics (stream MetricBatch) returns (Empty);
}

message WorkerMessage {
    oneof msg {
        RegisterRequest register = 1;
        Heartbeat heartbeat = 2;
        TestFinished test_finished = 3;
    }
}

message RegisterRequest {
    string id = 1;
    string address = 2;
    uint32 available_cpus = 3;
}

message Heartbeat {
    string worker_id = 1;
    uint64 timestamp = 2;
}

message TestFinished {
    string worker_id = 1;
}

message ControllerCommand {
    oneof cmd {
        StartTest start_test = 1;
        StopTest stop_test = 2;
    }
}

message StartTest {
    string script_content = 1;
    string config_json = 2;
    map<string, string> assets = 3;
}

message StopTest {}

message MetricBatch {
    string worker_id = 1;
    repeated Metric metrics = 2;
}

message Metric {
    string name = 1;
    uint64 duration_ns = 2;
    uint32 status = 3;
    optional string error = 4;
    uint64 timestamp = 5;
}

message Empty {}
